# c3po

./: .gitignore  Cargo.toml
config/: default.toml  local.example.toml
src/: config.rs  lib.rs  main.rs
src/book_store/: freshness.rs  mod.rs  store.rs  update.rs
src/clob/: listener.rs  message.rs  mod.rs  parser.rs  subscription.rs
src/depth_engine/: mod.rs  result.rs  sizing.rs  walker.rs
src/evaluator/: classification.rs  evaluator_loop.rs  mod.rs  top_book.rs
src/market_scanner/: client.rs  filters.rs  mod.rs  parser.rs  scheduler.rs
src/persistence/: eval_writer.rs  jsonl.rs  mod.rs  opportunity_writer.rs  replay.rs  signal_writer.rs
src/ptb_store/: matcher.rs  mod.rs  sanity.rs  status.rs  store.rs
src/registry/: indexes.rs  lifecycle.rs  market_registry.rs  mod.rs
src/relation_engine/: deterministic.rs  grouping.rs  mod.rs  package_builder.rs  pair_generator.rs
src/rtds/: listener.rs  message.rs  mod.rs  normalizer.rs  symbols.rs
src/runtime/: mod.rs  shutdown.rs  supervisor.rs  tasks.rs
src/signal_engine/: filters.rs  mod.rs  publisher.rs  signal_builder.rs
src/telemetry/: alerts.rs  health.rs  metrics.rs  mod.rs
src/tick_store/: mod.rs  replay.rs  store.rs
src/types/: asset.rs  book.rs  evaluation.rs  market.rs  mod.rs  package.rs  ptb.rs  signal.rs  tick.rs  timeframe.rs  token.rs
tests/: relation_engine_tests.rs
