[package]
name = "c3po"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
config = "0.14"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
serde_json = "1"

[dev-dependencies]
rust_decimal_macros = "1"