[package]
name = "c3po"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
config = "0.14"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
rust_decimal_macros = "1"